# onnx-tests

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  covered_operators.md  pixi.toml  pyproject.toml  skips-ort.txt  xfails-ort.txt  xfails-reference.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
onnx_tests/: _base_draw.py  _kernel_op.py  array_properties.py  average_pool.py  config.py  conv.py  creation_functions.py  elementwise_ops.py  helpers.py  linear_algebra_ops.py  manipulation_functions.py  runtime_wrappers.py  searching_ops.py  slice.py  statistical_ops.py  test_averagepool.py  test_binary.py  test_conv.py  test_matmul.py  test_reduce.py  test_searching.py  test_slice.py  test_unary_element_wise.py  test_where.py
report/: coverage.md
tests/: conftest.py  helpers.py  test_array_properties.py  test_averagepool.py  test_binary.py  test_conv.py  test_creation_functions.py  test_elementwise.py  test_linalg.py  test_manipulation_functions.py  test_matmul.py  test_reduce.py  test_searching.py  test_slice.py  test_statistical.py  test_unary.py  test_unary_element_wise.py  test_where.py  utils.py
