[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "onnx-tests"
description = "Property-based tests for the ONNX standard"
dynamic = ["version"]
authors = [
  { name = "Christian Bourjau", email = "christian.bourjau@quantco.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/cbourjau/onnx-tests"


[tool.setuptools.packages.find]
include = ["onnx_tests"]
namespaces = false

[project.scripts]

[tool.docformatter]
black = true # only sets the style options to the default values of black

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.10'
no_implicit_optional = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = ["onnxruntime", "jaxonnxruntime"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.typos]
[tool.typos.default.extend-words]
ND = "ND"
